@@ -1,7 +1,7 @@
 '''
 Dependency -- 
 '''
-# vim:sw=4
+# vim:sw=4:et
 
 from __future__ import generators
 
@@ -18,6 +18,17 @@ STEREOTYPE_OPEN = '\xc2\xab' # '<<'
 STEREOTYPE_CLOSE = '\xc2\xbb' # '>>'
 
 class DependencyItem(RelationshipItem):
+    """This class represents all types of dependencies.
+
+    Normally a dependency looks like a dashed line woth an arrow head.
+    The dependency can have a stereotype attached to it, stating the kind of
+    dependency we're dealing with. The dependency kind can only be changed if
+    the dependency is not connected to two items.
+
+    In the special case of an Implementation dependency, where one end is
+    connected to an InterfaceItem, the line is drawn as a solid line without
+    arrowhead.
+    """
 
     FONT = 'sans 10'
 
@@ -26,21 +37,33 @@ class DependencyItem(RelationshipItem):
 	'Dependency type', (
 	    'DependencyTypeDependency',
 	    'DependencyTypeUsage',
-	    'DependencyTypeRealization')
+	    'DependencyTypeRealization',
+	    'DependencyTypeImplementation')
     )
 
     def __init__(self, id=None):
 	self.dependency_type = UML.Dependency
 
         RelationshipItem.__init__(self, id)
-        self.set(dash=(7.0, 5.0), has_head=1, head_fill_color=0,
-                 head_a=0.0, head_b=15.0, head_c=6.0, head_d=6.0)
-        
+
         font = pango.FontDescription(self.FONT)
         self._stereotype = diacanvas.shape.Text()
         self._stereotype.set_font_description(font)
         self._stereotype.set_wrap_mode(diacanvas.shape.WRAP_NONE)
         self._stereotype.set_markup(False)
+
+        self.set(head_fill_color=0, head_a=0.0, head_b=15.0, head_c=6.0, head_d=6.0)
+        self._set_dashed()
+
+    def save(self, save_func):
+	RelationshipItem.save(self, save_func)
+	save_func('dependency_type', self.dependency_type.__name__)
+
+    def load(self, name, value):
+	if name == 'dependency_type':
+	    self.set_dependency_type(getattr(UML, value))
+	else:
+	    RelationshipItem.load(self, name, value)
 
     def get_popup_menu(self):
         if self.subject:
@@ -58,8 +81,25 @@ class DependencyItem(RelationshipItem):
 	    self._stereotype.set_text(STEREOTYPE_OPEN + 'use' + STEREOTYPE_CLOSE)
 	elif dependency_type is UML.Realization:
 	    self._stereotype.set_text(STEREOTYPE_OPEN + 'realize' + STEREOTYPE_CLOSE)
+	elif dependency_type is UML.Implementation:
+	    self._stereotype.set_text(STEREOTYPE_OPEN + 'implements' + STEREOTYPE_CLOSE)
 	else:
 	    self._stereotype.set_text('')
+
+    def _set_dashed(self):
+        """Display a depenency as a dashed arrow, with optional stereotype.
+        """
+        if not self.get_property('has_head'):
+            self.set(dash=(7.0, 5.0), has_head=1)
+            self.set_dependency_type(self.dependency_type)
+
+    def _set_solid(self):
+        """Make a solid line, as used when a dependency is connected to an
+        Interface.
+        """
+        if self.get_property('has_head'):
+            self.set(dash=None, has_head=0)
+            self._stereotype.set_text('')
 
     def update_label(self, p1, p2):
         w, h = self._stereotype.to_pango_layout(True).get_pixel_size()
@@ -118,8 +158,14 @@ class DependencyItem(RelationshipItem):
 
     def confirm_connect_handle (self, handle):
         """See RelationshipItem.confirm_connect_handle().
+
+        In case of an Implementation, the head should be connected to an
+        Interface and the tail to a BehavioredClassifier.
+
+        TODO: Should Class also inherit from BehavioredClassifier?
         """
         #print 'confirm_connect_handle', handle, self.subject
+
         c1 = self.handles[0].connected_to
         c2 = self.handles[-1].connected_to
         if c1 and c2:
